--- a/scss/pages/_restaurants.scss
+++ b/scss/pages/_restaurants.scss
@@ -66,19 +66,16 @@ section.menu{
             position: relative;
             width: 100%;
             height: 60px;
-            white-space: nowrap;
+            &--long{height: 85px;} 
             display: flex;flex-direction: column;
             justify-content: space-between;
-            overflow: hidden;
-            &--long{
-                height: 85px;
-            } 
-            .long{
-                white-space: normal;
-            }
+            white-space: nowrap;
+            .long{white-space: normal;}
             transition: all $animation-dur--long ease-in-out;
             & > * {
                 width: calc(100% - 45px);
+                overflow: hidden;
+                text-overflow: ellipsis;    
             }
 /*            & h3 + p{
                 margin-top: 10px;
@@ -122,8 +119,6 @@ section.menu{
                 width: calc(100% - 100px);
                 & > * {     /*HIDE THE TOO LONG NAME WITH SUSPENSION POINTS*/ 
                     white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;    
                 }
             }
             & .menu-item__button{  /*CHECKBOX APPEAR*/ 
